--- a/movimientos/templates/controlrxeventos.html
+++ b/movimientos/templates/controlrxeventos.html
@@ -196,7 +196,9 @@
         <div class="centrar mb-4">
             <img src="{% static 'logo.png' %}" width="50" height="50">
             <h1>Entrega y Recojo de Radios</h1>
+            <h2 style="margin: 0;">Día: {{ dia }}</h2>
         </div>
+
         <!-- Nav Tabs -->
         <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
@@ -276,7 +278,7 @@
                                 {% csrf_token %}
                                 <input type="hidden" name="serial_elim" value="{{ item.serial }}">
                                 <button type="submit" class="btn btn-danger btn-sm" style="height: 15px; width: 20px;"
-                                    title="Eliminar"></button>
+                                    title="Eliminar">-</button>
                             </form>
                         </li>
                         {% empty %}
@@ -312,6 +314,12 @@
                 </div>
 
                 </form>
+                <div class="centrar">
+                    <a href='/cerrareventorx/{{id}}' class="btn btn-danger" id="cerrar_dia"
+                        style="margin-top: 10px; margin-right: 20px;" title="Cerrar día"
+                        onclick="return confirm('¿Esta seguro? Esta acción no tiene reverso.');"> CERRAR DÍA
+                    </a>
+                </div>
             </div>
 
 
@@ -339,11 +347,6 @@
                                     </form>
                                 </div>
                             </div>
-                        </div>
-                        <div class="row" style="margin-top: 10px;">
-                            <h5>
-                                <li>Total Radios por Recoger: {{total_entregado}}</li>
-                            </h5>
                         </div>
                     </form>
                 </div>
@@ -384,12 +387,16 @@
                         <button class="nav-link " id="tab5-tab" data-bs-toggle="tab" data-bs-target="#tab5"
                             type="button" role="tab" aria-controls="tab2" aria-selected="false">RECOGIDAS</button>
                     </li>
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link " id="tab6-tab" data-bs-toggle="tab" data-bs-target="#tab6"
+                            type="button" role="tab" aria-controls="tab2" aria-selected="false">ENVIAR MENSAJE</button>
+                    </li>
                 </ul>
                 <div class="tab-content" id="myTabContent">
                     <div class="tab-pane fade show active" id="tab4" role="tabpanel" aria-labelledby="tab4-tab">
                         <h4>TOTAL ENTREGADAS: {{total_entregado}}</h4>
                         <div
-                            style="border: 2px solid #7ed957; padding: 15px; width: 400px ;border-radius: 8px; max-width: 100%; margin: 0 auto; margin-top: 10px; background-color: #c7e0bb; display: flex; flex-direction: column; align-items: center; text-align: center;">
+                            style="border: 2px solid #7ed957; padding: 15px; width: 450px ;border-radius: 8px; max-width: 100%; margin: 0 auto; margin-top: 10px; background-color: #c7e0bb; display: flex; flex-direction: column; align-items: center; text-align: center;">
                             <div class="row d-flex justify-content-center">
                                 <div class="mb-3">
                                     <input type="text" id="buscarResponsable" class="form-control"
@@ -409,6 +416,7 @@
                                                     <th>SERIAL</th>
                                                     <th>ESTADO</th>
                                                     <th>HORA</th>
+                                                    <th>DIA</th>
                                                 </tr>
                                             </thead>
                                             <tbody id="tablaResumen">
@@ -419,10 +427,12 @@
                                                     <td>{{ c.responsable }}</td>
                                                     <td>{{ c.serial }}</td>
                                                     <td>{{ c.estadorx }}</td>
-                                                    <td>{{c.hora|default:" "}}</td>
+                                                    <td>{{c.hora_entrega}}</td>
+                                                    <td>{{c.dia}}</td>
                                                 </tr>
                                                 {% endif %}
                                                 {% endfor %}
+
                                             </tbody>
                                         </table>
                                     </div>
@@ -430,12 +440,11 @@
                             </div>
 
                         </div>
-
                     </div>
                     <div class="tab-pane fade show" id="tab5" role="tabpanel" aria-labelledby="tab5-tab">
                         <h4>TOTAL RECOGIDAS: {{total_recogido}}</h4>
                         <div
-                            style="border: 2px solid #7ed957; padding: 15px; width: 400px ;border-radius: 8px; max-width: 100%; margin: 0 auto; margin-top: 10px; background-color: #c7e0bb; display: flex; flex-direction: column; align-items: center; text-align: center;">
+                            style="border: 2px solid #7ed957; padding: 15px; width: 450px ;border-radius: 8px; max-width: 100%; margin: 0 auto; margin-top: 10px; background-color: #c7e0bb; display: flex; flex-direction: column; align-items: center; text-align: center;">
                             <div class="row d-flex justify-content-center">
                                 <div class="mb-3">
                                     <input type="text" id="buscarResponsabler" class="form-control"
@@ -455,6 +464,7 @@
                                                     <th>SERIAL</th>
                                                     <th>ESTADO</th>
                                                     <th>HORA</th>
+                                                    <th>DIA</th>
                                                 </tr>
                                             </thead>
                                             <tbody id="tablaResumen">
@@ -465,59 +475,64 @@
                                                     <td>{{ c.responsable }}</td>
                                                     <td>{{ c.serial }}</td>
                                                     <td>{{ c.estadorx }}</td>
-                                                    <td>{{c.hora|default:" "}}</td>
+                                                    <td>{{c.hora}}</td>
+                                                    <td>{{c.dia}}</td>
                                                 </tr>
                                                 {% endif %}
                                                 {% endfor %}
+
                                             </tbody>
                                         </table>
                                     </div>
                                 </div>
                             </div>
 
-
-
-                    </div>
-
-                </div>
-                <!-- <div
-                    style="border: 2px solid #7ed957; padding: 15px; width: 400px ;border-radius: 8px; max-width: 100%; margin: 0 auto; margin-top: 10px; background-color: #c7e0bb; display: flex; flex-direction: column; align-items: center; text-align: center;">
-                    <div class="row d-flex justify-content-center">
-                        <div class="mb-3">
-                            <input type="text" id="buscarResponsable" class="form-control"
-                                placeholder="Buscar por Responsable">
                         </div>
-                        <div class="col-md-12">
-                            <div class="table-responsive py-2 text-center">
-                                <table class="table table-striped" style="margin: 0 auto;">
-                                    <thead>
-                                        <tr>
-                                            <th>N°</th>
-                                            <th>RESPONSABLE</th>
-                                            <th>SERIAL</th>
-                                            <th>ESTADO</th>
-                                            <th>HORA</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody id="tablaResumen">
-                                        {% for c in tabla_resumen %}
-                                        <tr>
-                                            <td>{{ forloop.counter }}</td>
-                                            <td>{{ c.responsable }}</td>
-                                            <td>{{ c.serial }}</td>
-                                            <td>{{ c.estadorx }}</td>
-                                            <td>{{c.hora|default:" "}}</td>
-                                        </tr>
-                                        {% endfor %}
-                                    </tbody>
-                                </table>
+                    </div>
+                    <div class="tab-pane fade show" id="tab6" role="tabpanel" aria-labelledby="tab6-tab">
+                        <div
+                            style="border: 2px solid #7ed957; padding: 15px; width: 300px ;border-radius: 8px; max-width: 100%; margin: 0 auto; margin-top: 10px; background-color: #c7e0bb; display: flex; flex-direction: column; align-items: center; text-align: center;">
+                            <div class="row d-flex justify-content-center">
+                                <div class="col-md-12">
+                                    <div class="table-responsive py-2 text-center">
+                                        <table class="table table-striped" style="margin: 0 auto;">
+                                            <thead>
+                                                <tr>
+                                                    <th>RESPONSABLE</th>
+                                                    <th>TELEFONO</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody id="tablaResumen">
+                                                {% for c in tabla_resumen %}
+                                                {% if c.estadorx == "E" and c.telefono != "" %}
+                                                <tr>
+                                                    <td>{{ c.responsable }}</td>
+                                                    <td>{{ c.telefono }}</td>
+                                                </tr>
+                                                {% endif %}
+                                                {% endfor %}
+
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                    <div class="centrar">
+                                        <a href='/sendmesaje/{{id}}' class="btn btn-danger" id="cerrar_dia"
+                                            style="margin-top: 10px; margin-right: 20px;" title="ENVIAR MENSAJE"
+                                            onclick="return confirm('¿Está seguro');">
+                                            ENVIAR WHATSAPP
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
+
                         </div>
                     </div>
+                </div>
 
-                </div> -->
             </div>
+
         </div>
+    </div>
     </div>
     </div>
 
@@ -608,59 +623,61 @@
         });
     </script>
 
-<script>
-    // Función para filtrar la tabla por responsable recogidas
-    document.getElementById('buscarResponsabler').addEventListener('keyup', function () {
-        var input = document.getElementById('buscarResponsabler');
-        var filter = input.value.toLowerCase();
-        var rows = document.querySelectorAll('#tablaResumen tr');
+    <script>
+        // Función para filtrar la tabla por responsable
+        document.getElementById('buscarResponsabler').addEventListener('keyup', function () {
+            var input = document.getElementById('buscarResponsabler');
+            var filter = input.value.toLowerCase();
+            var rows = document.querySelectorAll('#tablaResumen tr');
 
-        rows.forEach(function (row) {
-            var responsable = row.cells[1].textContent.toLowerCase(); // Columna "RESPONSABLE" (índice 1)
-            if (responsable.indexOf(filter) > -1) {
-                row.style.display = "";  // Mostrar fila
-            } else {
-                row.style.display = "none";  // Ocultar fila
-            }
+            rows.forEach(function (row) {
+                var responsable = row.cells[1].textContent.toLowerCase(); // Columna "RESPONSABLE" (índice 1)
+                if (responsable.indexOf(filter) > -1) {
+                    row.style.display = "";  // Mostrar fila
+                } else {
+                    row.style.display = "none";  // Ocultar fila
+                }
+            });
         });
-    });
-</script>
+    </script>
 
-<script>
-    // Función para filtrar la tabla por serial
-    document.getElementById('buscarserial').addEventListener('keyup', function () {
-        var input = document.getElementById('buscarserial');
-        var filter = input.value.toLowerCase();
-        var rows = document.querySelectorAll('#tablaResumen tr');
 
-        rows.forEach(function (row) {
-            var responsable = row.cells[2].textContent.toLowerCase(); // Columna "RESPONSABLE" (índice 1)
-            if (responsable.indexOf(filter) > -1) {
-                row.style.display = "";  // Mostrar fila
-            } else {
-                row.style.display = "none";  // Ocultar fila
-            }
+
+    <script>
+        // Función para filtrar la tabla por serial
+        document.getElementById('buscarserial').addEventListener('keyup', function () {
+            var input = document.getElementById('buscarserial');
+            var filter = input.value.toLowerCase();
+            var rows = document.querySelectorAll('#tablaResumen tr');
+
+            rows.forEach(function (row) {
+                var responsable = row.cells[2].textContent.toLowerCase(); // Columna "RESPONSABLE" (índice 1)
+                if (responsable.indexOf(filter) > -1) {
+                    row.style.display = "";  // Mostrar fila
+                } else {
+                    row.style.display = "none";  // Ocultar fila
+                }
+            });
         });
-    });
-</script>
+    </script>
 
-<script>
-    // Función para filtrar la tabla por serial recogidas
-    document.getElementById('buscarserialr').addEventListener('keyup', function () {
-        var input = document.getElementById('buscarserialr');
-        var filter = input.value.toLowerCase();
-        var rows = document.querySelectorAll('#tablaResumen tr');
+    <script>
+        // Función para filtrar la tabla por serial
+        document.getElementById('buscarserialr').addEventListener('keyup', function () {
+            var input = document.getElementById('buscarserialr');
+            var filter = input.value.toLowerCase();
+            var rows = document.querySelectorAll('#tablaResumen tr');
 
-        rows.forEach(function (row) {
-            var responsable = row.cells[2].textContent.toLowerCase(); // Columna "RESPONSABLE" (índice 1)
-            if (responsable.indexOf(filter) > -1) {
-                row.style.display = "";  // Mostrar fila
-            } else {
-                row.style.display = "none";  // Ocultar fila
-            }
+            rows.forEach(function (row) {
+                var responsable = row.cells[2].textContent.toLowerCase(); // Columna "RESPONSABLE" (índice 1)
+                if (responsable.indexOf(filter) > -1) {
+                    row.style.display = "";  // Mostrar fila
+                } else {
+                    row.style.display = "none";  // Ocultar fila
+                }
+            });
         });
-    });
-</script>
+    </script>
 
     <!-- Bootstrap JS and Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -692,6 +709,14 @@
                 localStorage.setItem('activeTab', 'tab2'); // Asegurarse de guardar tab2 como activo
                 location.reload(); // Recargar la página
             });
+        });
+    </script>
+    <script>
+        document.getElementById('cerrar_dia').addEventListener('click', function () {
+            // Redirigir después de 2 segundos para dar tiempo a la descarga
+            setTimeout(function () {
+                window.location.href = '/ordenesCerradas/';  // URL a donde quieres redirigir
+            }, 3000);  // Ajusta el tiempo si es necesario
         });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
